
    o   The L-BFGS-B option of optim() apparently needs part of its 
	workspace zeroed.  (PR#6720)

    o   extractAIC.survreg needed updating.

    o   When using the header Rmath.h in standalone mode, the case where
        TRUE, FALSE are already defined is now handled correctly.

    o	Package utils now exports several functions that are needed for
        writing Sweave drivers.


		CHANGES IN R VERSION 1.9.0


USER-VISIBLE CHANGES

    o	Underscore '_' is now allowed in syntactically valid names, and
	make.names() no longer changes underscores.  Very old code
	that makes use of underscore for assignment may now give
	confusing error messages.

    o	Package 'base' has been split into packages 'base', 'graphics',
	'stats' and 'utils'.  All four are loaded in a default
	installation, but the separation allows a 'lean and mean'
	version of R to be used for tasks such as building indices.

	Packages ctest, eda, modreg, mva, nls, stepfun and ts have been
	merged into stats, and lqs has been returned to MASS.  In all
	cases a stub has been left that will issue a warning and ensure
	that the appropriate new home is loaded.  All the time series
	datasets have been moved to package stats.  Sweave has been
	moved to utils.

	Package mle has been moved to stats4 which will become the
	central place for statistical S4 classes and methods
	distributed with base R.  Package mle remains as a stub.

	Users may notice that code in .Rprofile is run with only the
	new base loaded and so functions may now not be found.	For
	example, ps.options(horizontal = TRUE) should be preceded by
	library(graphics) or called as graphics::ps.options or,
	better, set as a hook -- see ?setHook.

    o	There has been a concerted effort to speed up the startup of
	an R session: it now takes about 2/3rds of the time of 1.8.1.

    o	A warning is issued at startup in a UTF-8 locale, as currently R
	only supports single-byte encodings.


NEW FEATURES
