@@ -4,7 +4,7 @@
 
 # @configure_input@
 
-revision='$Revision: 1.149 $'
+revision='$Revision: 1.150 $'
 version=`set - ${revision}; echo ${2}`
 version="R add-on package installer ${version}
 
@@ -407,9 +407,6 @@ do_install_source () {
       eval ${MAKE} ${makefiles} \
 	&& cp *@SHLIB_EXT@ "${R_PACKAGE_DIR}/libs" \
         || error=true; \
-      if ${clean}; then
-	${MAKE} clean
-      fi
       cd ..
     else
       cd src;
@@ -418,10 +415,6 @@ do_install_source () {
 	sh "${R_HOME}/bin/SHLIB" -o "${pkg_name}@SHLIB_EXT@" ${srcs} \
           && cp *@SHLIB_EXT@ "${R_PACKAGE_DIR}/libs" \
 	  || error=true; \
-	if ${clean}; then
-	  rm -rf .libs _libs
-	  rm -f *.o *@SHLIB_EXT@
-	fi
       else
 	warning "no source files found"
       fi
@@ -629,6 +622,16 @@ do_install_source () {
   ## </FIXME>
 
   if ${clean}; then
+    if test -d src; then
+      cd src
+      if test -f Makefile; then
+        ${MAKE} clean
+      else
+        rm -rf .libs _libs
+        rm -f *.o *@SHLIB_EXT@
+      fi
+      cd ..
+    fi
     if test -x ./cleanup ; then
       ./cleanup
     fi
